--- a/styles/global.css
+++ b/styles/global.css
@@ -2,18 +2,7 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    Segoe UI,
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    Fira Sans,
-    Droid Sans,
-    Helvetica Neue,
+  font-family: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
     sans-serif;
 }
 
@@ -29,4 +18,10 @@ a {
 img {
   max-width: 100%;
   height: auto;
+}
+
+main {
+  padding: 0;
+  margin: 0;
+  width: 100%;
 }
