--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,8 @@
 .container {
   min-height: 100%;
+  min-width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
 
