--- a/styles/main.css
+++ b/styles/main.css
@@ -532,12 +532,41 @@ video {
   }
 }
 
-.col-span-1 {
-  grid-column: span 1 / span 1;
+.visible {
+  visibility: visible;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
+.invisible {
+  visibility: hidden;
+}
+
+.fixed {
+  position: fixed;
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.sticky {
+  position: sticky;
+}
+
+.inset-y-0 {
+  top: 0px;
+  bottom: 0px;
+}
+
+.right-0 {
+  right: 0px;
+}
+
+.top-0 {
+  top: 0px;
 }
 
 .col-start-1 {
@@ -548,8 +577,8 @@ video {
   grid-column-start: 2;
 }
 
-.col-start-3 {
-  grid-column-start: 3;
+.row-span-2 {
+  grid-row: span 2 / span 2;
 }
 
 .row-start-1 {
@@ -560,40 +589,64 @@ video {
   grid-row-start: 2;
 }
 
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
+
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
 .flex {
   display: flex;
 }
 
-.grid {
-  display: grid;
+.\!h-6 {
+  height: 1.5rem !important;
+}
+
+.h-16 {
+  height: 4rem;
 }
 
 .h-full {
   height: 100%;
 }
 
+.\!w-6 {
+  width: 1.5rem !important;
+}
+
 .w-full {
   width: 100%;
+}
+
+.max-w-min {
+  max-width: -moz-min-content;
+  max-width: min-content;
+}
+
+.flex-auto {
+  flex: 1 1 auto;
 }
 
 .shrink {
   flex-shrink: 1;
 }
 
+.shrink-0 {
+  flex-shrink: 0;
+}
+
 .grow {
   flex-grow: 1;
-}
-
-.auto-cols-auto {
-  grid-auto-columns: auto;
-}
-
-.grid-cols-12 {
-  grid-template-columns: repeat(12, minmax(0, 1fr));
-}
-
-.grid-rows-1 {
-  grid-template-rows: repeat(1, minmax(0, 1fr));
 }
 
 .flex-row {
@@ -604,8 +657,16 @@ video {
   flex-direction: column;
 }
 
+.place-content-center {
+  place-content: center;
+}
+
 .items-center {
   align-items: center;
+}
+
+.justify-center {
+  justify-content: center;
 }
 
 .gap-x-2 {
@@ -617,8 +678,16 @@ video {
   place-self: center;
 }
 
+.self-center {
+  align-self: center;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-auto {
+  overflow-x: auto;
 }
 
 .overflow-y-auto {
@@ -633,9 +702,52 @@ video {
   scroll-behavior: smooth;
 }
 
+.text-clip {
+  text-overflow: clip;
+}
+
+.whitespace-nowrap {
+  white-space: nowrap;
+}
+
+.rounded-full {
+  border-radius: 9999px;
+}
+
+.rounded-md {
+  border-radius: 0.375rem;
+}
+
+.border-b {
+  border-bottom-width: 1px;
+}
+
+.border-gray-400 {
+  --tw-border-opacity: 1;
+  border-color: rgb(156 163 175 / var(--tw-border-opacity));
+}
+
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.p-2 {
+  padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
+}
+
 .px-3 {
   padding-left: 0.75rem;
   padding-right: 0.75rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-4 {
@@ -645,6 +757,10 @@ video {
 
 .pl-5 {
   padding-left: 1.25rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .text-base {
@@ -657,30 +773,150 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.transition-all {
+.shadow-md {
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.filter {
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
+/* main container */
+
+.grid-container {
+  display: grid;
+  transition: 300ms;
+  height: 100%;
+  padding: 0px;
+  margin: 0px;
+  gap: 0px;
+  grid-template-rows: auto 1fr;
+  grid-template-columns: min-content minmax(0, 1fr);
+}
+
+/* drawer menu pane*/
+
+.nav-root {
+  --nav-mini-width: 5rem;
+  --nav-full-width: 14.75rem;
+  height: 100vh;
+  overflow-x: hidden;
+}
+
+.navbar {
+  height: 100vh;
+  display: grid;
+  grid-template-rows: auto minmax(0, 1fr) auto;
   transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  --nav-cur-width-padded: calc(var(--nav-cur-width) - 1.5rem);
+  --nav-cur-width-2padded: calc(var(--nav-cur-width) - 3rem);
+  z-index: 200;
+  overflow-x: hidden;
+  width: var(--nav-cur-width);
+}
+
+.bg-nav {
+  background: #2f2f2f;
+  overflow-x: hidden;
+  grid-column-start: 1;
+  grid-row: span 3 / span 3;
+  grid-row-start: 1;
+  border-right-width: 2px;
+  --tw-border-opacity: 1;
+  border-right-color: rgb(249 250 251 / var(--tw-border-opacity));
+}
+
+.nav-root {
+  --nav-cur-width: var(--nav-full-width);
+  width: var(--nav-full-width);
+}
+
+.mini.nav-root {
+  width: var(--nav-mini-width);
+}
+
+.mini-real .navbar {
+  --nav-cur-width: var(--nav-mini-width);
+}
+
+.nav-anim {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  width: var(--nav-cur-width);
+  transition-property: width;
+}
+
+.nav-root:not(.mini-real) .navbar .navbar-item {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.navbar .navbar-item:hover::before {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transform-property: min-width;
+  min-width: var(--nav-cur-width-padded);
+}
+
+.mini-real .mini-hide {
+  opacity: 0;
+}
+
+.temporary .nav-root {
+  width: 0px;
+}
+
+.temporary .navbar {
+  pointer-events: none;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
 
-/* drawer menu pane - note the 0px width */
-
-.navbar {
-  background: #2f2f2f;
-  height: 100vh;
-  padding: 0px;
-  display: grid;
-  grid-template-rows: auto minmax(0, 1fr) auto;
+.temporary .navbar .activeDrawer {
+  pointer-events: auto;
+  --tw-translate-x: 0px;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.navbar_open {
-  overflow-x: hidden;
-  min-width: 200px;
+.nav-open {
+  height: 2.5rem;
+  width: 1.5rem;
 }
 
-.navbar_closed {
-  overflow: hidden;
-  max-width: 72px;
+.nav-close {
+  display: none;
+  height: 2.5rem;
+  width: 1.5rem;
+}
+
+.mini .nav-open {
+  display: none;
+}
+
+.mini .nav-close {
+  display: block;
+}
+
+.mini-real .nav-close,
+.mini-real .nav-open {
+  display: none;
+}
+
+.nav-root.temporary.activeDrawer .overlay {
+  position: absolute;
+  inset: 0px;
+  z-index: 10;
+  display: block;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  --tw-bg-opacity: 0.3;
 }
 
 .fade_enter_active,
@@ -698,11 +934,88 @@ video {
   transform: translateY(-30px);
 }
 
-.navbar_item {
+.navbar-item {
+  position: relative !important;
   border-radius: 0.25rem !important;
   padding: 1rem !important;
 }
 
-.navbar_item_active {
+.navbar-item-active {
   background: #334155;
+}
+
+.data-table-container {
+  display: flex !important;
+  width: 100% !important;
+  flex-direction: column !important;
+  text-align: left !important;
+  font-size: 0.875rem !important;
+  line-height: 1.25rem !important;
+  --tw-text-opacity: 1 !important;
+  color: rgb(107 114 128 / var(--tw-text-opacity)) !important;
+}
+
+.data-table-container:where([dir="rtl"], [dir="rtl"] *) {
+  text-align: right !important;
+}
+
+.data-table-row {
+  position: relative !important;
+  display: grid !important;
+  width: 100% !important;
+  flex: 1 1 auto !important;
+  align-items: center !important;
+  gap: 0px !important;
+  text-align: left !important;
+}
+
+.data-table-cell {
+  overflow: hidden;
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important;
+  padding-top: 1rem !important;
+  padding-bottom: 1rem !important;
+}
+
+.data-table-header {
+  font-size: 0.75rem !important;
+  line-height: 1rem !important;
+  --tw-text-opacity: 1 !important;
+  color: rgb(55 65 81 / var(--tw-text-opacity)) !important;
+}
+
+.data-table-item-index {
+  display: flex;
+  width: 0.75rem;
+  flex-grow: 0;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.first\:font-medium:first-child {
+  font-weight: 500;
+}
+
+.first\:text-gray-900:first-child {
+  --tw-text-opacity: 1;
+  color: rgb(17 24 39 / var(--tw-text-opacity));
+}
+
+.hover\:bg-gray-100:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-200:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
