--- a/styles/main.css
+++ b/styles/main.css
@@ -536,6 +536,10 @@ video {
   visibility: hidden;
 }
 
+.collapse {
+  visibility: collapse;
+}
+
 .fixed {
   position: fixed;
 }
@@ -611,6 +615,11 @@ video {
   margin-right: 1rem;
 }
 
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
@@ -624,8 +633,16 @@ video {
   margin-top: 1rem;
 }
 
+.mt-6 {
+  margin-top: 1.5rem;
+}
+
 .flex {
   display: flex;
+}
+
+.table {
+  display: table;
 }
 
 .grid {
@@ -646,6 +663,10 @@ video {
 
 .h-full {
   height: 100%;
+}
+
+.h-screen {
+  height: 100vh;
 }
 
 .min-h-12 {
@@ -670,6 +691,10 @@ video {
 
 .min-w-24 {
   min-width: 6rem;
+}
+
+.max-w-full {
+  max-width: 100%;
 }
 
 .max-w-min {
@@ -703,6 +728,10 @@ video {
 
 .grow-0 {
   flex-grow: 0;
+}
+
+.resize {
+  resize: both;
 }
 
 .flex-row {
@@ -860,6 +889,11 @@ video {
   padding-right: 1.5rem;
 }
 
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
@@ -868,6 +902,11 @@ video {
 .py-4 {
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.py-5 {
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
 }
 
 .pl-5 {
@@ -1090,7 +1129,6 @@ video {
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
   position: relative;
-  width: 100%;
   overflow: hidden;
 }
 
@@ -1223,6 +1261,25 @@ textarea:user-invalid {
   scrollbar-color: #828282 transparent;
   scrollbar-width: thin;
   overscroll-behavior: contain;
+}
+
+.out-range {
+  opacity: 0 !important;
+  pointer-events: none !important;
+  cursor: default !important;
+}
+
+.page-control .active {
+  background: #3b82f6;
+  color: white;
+}
+
+.page-control button {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 9999px;
 }
 
 .first\:font-medium:first-child {
