add location and fix editor render

--- a/styles/main.css
+++ b/styles/main.css
@@ -609,6 +609,10 @@ video {
   z-index: 10;
 }
 
+.z-20 {
+  z-index: 20;
+}
+
 .z-30 {
   z-index: 30;
 }
@@ -697,9 +701,9 @@ video {
   display: none;
 }
 
-.size-36 {
-  width: 9rem;
-  height: 9rem;
+.\!size-32 {
+  width: 8rem !important;
+  height: 8rem !important;
 }
 
 .size-5 {
@@ -768,6 +772,10 @@ video {
   flex: 1 1 auto;
 }
 
+.flex-shrink-0 {
+  flex-shrink: 0;
+}
+
 .shrink {
   flex-shrink: 1;
 }
@@ -784,12 +792,20 @@ video {
   flex-grow: 1;
 }
 
+.flex-grow-0 {
+  flex-grow: 0;
+}
+
 .grow {
   flex-grow: 1;
 }
 
 .grow-0 {
   flex-grow: 0;
+}
+
+.basis-0 {
+  flex-basis: 0px;
 }
 
 .cursor-pointer {
@@ -1400,7 +1416,7 @@ textarea,
   box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
     #d1d5db 0px 0px 0px 1px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px;
   outline-color: #3b82f6;
-  min-height: 32px;
+  min-height: 2.5rem;
 }
 
 input:invalid,
