--- a/styles/layout.css
+++ b/styles/layout.css
@@ -205,7 +205,7 @@ textarea,
   box-shadow: rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px,
     theme(colors.gray.300) 0px 0px 0px 1px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px, rgba(0, 0, 0, 0) 0px 0px 0px 0px;
   outline-color: theme(colors.blue.500);
-  min-height: 32px;
+  min-height: theme(height.10);
 }
 
 input:invalid,
