--- a/styles/main.css
+++ b/styles/main.css
@@ -763,10 +763,6 @@ video {
   height: 100vh;
 }
 
-.max-h-80 {
-  max-height: 20rem;
-}
-
 .min-h-12 {
   min-height: 3rem;
 }
@@ -875,6 +871,10 @@ video {
 
 .items-center {
   align-items: center;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-end {
