--- a/styles/main.css
+++ b/styles/main.css
@@ -763,6 +763,10 @@ video {
   height: 100vh;
 }
 
+.min-h-10 {
+  min-height: 2.5rem;
+}
+
 .min-h-12 {
   min-height: 3rem;
 }
@@ -978,6 +982,10 @@ video {
   overflow-y: hidden;
 }
 
+.overflow-y-scroll {
+  overflow-y: scroll;
+}
+
 .scroll-smooth {
   scroll-behavior: smooth;
 }
@@ -1106,6 +1114,14 @@ video {
   --tw-bg-opacity: 0.6;
 }
 
+.fill-blue-500 {
+  fill: #3b82f6;
+}
+
+.fill-gray-700 {
+  fill: #374151;
+}
+
 .object-contain {
   -o-object-fit: contain;
      object-fit: contain;
@@ -1164,10 +1180,6 @@ video {
 
 .pl-2 {
   padding-left: 0.5rem;
-}
-
-.pl-4 {
-  padding-left: 1rem;
 }
 
 .pl-5 {
@@ -1341,9 +1353,18 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.navbar .navbar-item .item-pad {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
 .nav-root:not(.mini-real) .navbar .navbar-item .item-pad {
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+
+.nav-root:not(.mini-real) .navbar .navbar-group .navbar-item .item-pad {
+  padding-left: 2rem;
 }
 
 .mini-real .mini-hide {
